// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Main with child 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  margin: 0 0;
  max-width: 35rem;
}

@media (min-width:480px) {
  .c0 {
    padding: 1rem 1rem 2rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    margin: 0;
    max-width: 100%;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    foo
  </div>
</main>
`;

exports[`renders centered content 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  margin: auto auto;
  max-width: 35rem;
}

@media (min-width:480px) {
  .c0 {
    padding: 1rem 1rem 2rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    margin: 0;
    max-width: 100%;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    foo
  </div>
</main>
`;

exports[`renders not centered content 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  margin: 0 0;
  max-width: 35rem;
}

@media (min-width:480px) {
  .c0 {
    padding: 1rem 1rem 2rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    margin: 0;
    max-width: 100%;
  }
}

<main
  class="c0"
>
  <div
    class="c1"
  >
    foo
  </div>
</main>
`;
